<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".TermsAndAgreement">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Data Privacy-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/data_privacy"
            android:textColor="@color/green"
            android:textSize="35sp" />

        <!--Texts-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:fadingEdge="none"
            android:paddingHorizontal="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/privacyPolicy1"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/information_collection_and_use"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/privacyPolicy2"
                    android:textSize="14sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingStart="45dp"
                    android:paddingEnd="45dp"
                    android:text="@string/google_play_services"
                    android:textSize="14sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/cookies"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/privacyPolicy3"
                    android:textSize="14sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/security"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/privacyPolicy4"
                    android:textSize="14sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/privacyPolicy5"
                    android:textSize="14sp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/termsBtn"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/poppins_medium"
        android:onClick="callHomeScreen"
        android:text="@string/agree_and_continue"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:transitionName="transition_home"
        app:cornerRadius="10dp"
        tools:ignore="TextContrastCheck" />

</LinearLayout>