<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    android:transitionName="transition_signup"
    android:visibility="visible"
    tools:context=".Register">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Back Button-->
        <ImageView
            android:id="@+id/SignupBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_back"
            android:transitionName="transition_back_btn" />


        <TextView
            android:id="@+id/Signup_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Create an Account"
            android:textColor="@color/green"
            android:textSize="35sp"
            android:transitionName="transition_title_text" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <!--First Name-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterfn"
                android:paddingBottom="5dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/green"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/gray"
                app:hintTextColor="@color/green"
                app:startIconDrawable="@drawable/ic_baseline_account_circle_24">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:inputType="text"
                    android:textColor="@color/black"></com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <!--Last Name-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterln"
                android:paddingBottom="5dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/green"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/gray"
                app:hintTextColor="@color/green"
                app:startIconDrawable="@drawable/ic_baseline_account_circle_24">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:inputType="text"
                    android:textColor="@color/black"></com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <!--Email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enteremail"
                android:paddingBottom="5dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/green"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/gray"
                app:hintTextColor="@color/green"
                app:startIconDrawable="@drawable/ic_baseline_email_24">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"></com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <!--Phone Number-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone Number"
                android:paddingBottom="5dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/green"
                app:boxStrokeWidthFocused="2dp"
                app:endIconTint="@color/gray"
                app:hintTextColor="@color/green"
                app:prefixText="+63"
                app:prefixTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_baseline_phone_24">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:inputType="phone"
                    android:textColor="@color/black"></com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>


            <!--Password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/green"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/gray"
                app:hintTextColor="@color/green"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:inputType="textPassword"
                    android:textColor="@color/black"></com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <!--Continue Button-->
        <Button
            android:id="@+id/reg_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/poppins_medium"
            android:onClick="registerUser"
            android:text="Continue"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:transitionName="transition_next_btn"
            app:cornerRadius="10dp" />
        <!--android:onClick="registerUser"-->

        <!--Login Existing Button-->
        <Button
            android:id="@+id/Signup_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:elevation="5dp"
            android:onClick="callLoginFromSignUp"
            android:text="Log in to your existing account"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:transitionName="transition_login_btn" />


    </LinearLayout>
</ScrollView>